# duckdb-pyspark-demo

./: Dockerfile  Makefile  README.md  duckspark.py  pyproject.toml
.devcontainer/: devcontainer.json
