[tool.poetry]
name = "duckspark-demo"
version = "0.1.0"
description = ""
authors = ["mehd-io <mehdi@mehd.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
duckdb = "^0.9.1"
pandas = "^2.1.1"
typing-extensions = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
